Actualización del informe

--- a/TelecomX_LATAM.ipynb
+++ b/TelecomX_LATAM.ipynb
@@ -43,7 +43,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 487
+          "height": 380
         },
         "id": "C2GU855MS0az",
         "outputId": "a18540d3-7660-4aab-f05c-8f4eeeaef4d3"
@@ -2540,7 +2540,7 @@
         "id": "1jgUnLqTmPdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 320
+          "height": 300
         },
         "outputId": "b3d7bf37-3470-45cd-d5a6-f631c4436134"
       },
@@ -5115,12 +5115,22 @@
       "source": [
         "## Análisis Exploratorio de datos\n",
         "\n",
+        "### Tipo de contrato\n",
+        "\n",
+        "Se observó una diferencia significativa en el comportamiento de cancelaciones según el tipo de contrato. Presentando que los contratos de largo plazo (dos años) presentan una mayor retención, mientras que los contratos mensuales su tasa de cancelación es mucho mayor.\n",
+        "\n",
+        "### Forma de pago\n",
+        "\n",
+        "La relación existente de los clientes que utilizan la tarjeta de crédito como forma de pago (pago domiciliado), presentan una mayor permanencia en la empresa. Y en contraste, los clientes que usan el \"Cheque electronico\" tienen mayor índice de cancelación.\n",
+        "\n",
+        "### Género vs Cancelación\n",
+        "\n",
+        "Se encontro que la diferencia de cancelación entre hombres y mujeres, es mínima. Presentando que las mujeres tienen una mayor tasa de cancelaciones.\n",
         "\n",
         "\n",
-        "Se encontro la siguiente referencia según genero:\n",
+        "### Adultos mayores\n",
         "\n",
-        "\n",
-        "[Gráfica de distribucion de genero_vs_Cancelacion](https:///content/Distribucion_genero_vs_Cancelacion.html)\n"
+        "Se encontro que la diferencia de cancelación entre clientes que son adultos mayores,presentan un mayor indice de cancelaciones.\n"
       ],
       "metadata": {
         "id": "d5DCluynvhqh"
@@ -5170,7 +5180,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "### Recomendaciones"
+        "### Recomendaciones\n",
+        "\n",
+        "Adicionalmente se consideran otras alternetivas a considerar según las posibilidades de la empresa.\n",
+        "\n",
+        "Dentro de la alternativas se sugieren las siguientes opciones:\n",
+        "\n",
+        "\n",
+        "\n",
+        "*   Incentivar a los empleados que logren obtener contrataciones de largo plazo.\n",
+        "*   Incentivar al suscriptor a travez de un descuento de pago mensual si realizan la domiciliació de pagos a su tarjeta\n",
+        "*   En caso de que el pago sea mensual, se sugiere que se les de un descuento si llegan a la permanencia minima de un año.\n",
+        "*   Se podría enviar un correo al año para agredecer su permanencia con la empresa y que contenga un cupón para alguna actividad\n",
+        "*   Para el caso de los que contraten por dos años, se le podria proporcionar una cuponera de descuentos o una invitación a un evento exclusivo para los clientes de la empresa.\n",
+        "\n"
       ],
       "metadata": {
         "id": "A5ZlPzlhwN55"
